Ignore .DS_Store and replace deprecated reflection API in HBoxUtil.
Co-authored-by: Cursor <cursoragent@cursor.com>